Add, Deisgn Updata, ItemList

--- a/WoowahanFresh/WoowahanFresh/View/Content/Home.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Content/Home.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home Test View Controller-->
+        <!--Home Table View Controller-->
         <scene sceneID="uGd-kg-pJJ">
             <objects>
-                <viewController id="gxl-Az-WL5" customClass="HomeTestViewController" customModule="WoowahanFresh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="gxl-Az-WL5" customClass="HomeTableViewController" customModule="WoowahanFresh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F3o-hn-b85">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -33,6 +34,7 @@
                             <constraint firstItem="f8D-Zj-pWt" firstAttribute="leading" secondItem="F3o-hn-b85" secondAttribute="leadingMargin" id="KLc-4A-pMz"/>
                             <constraint firstItem="f8D-Zj-pWt" firstAttribute="top" secondItem="F3o-hn-b85" secondAttribute="topMargin" id="bMb-Pw-uYk"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="LRw-ck-c8c"/>
                     </view>
                     <navigationItem key="navigationItem" id="bQ5-QB-lFj"/>
                     <size key="freeformSize" width="375" height="667"/>
