--- a/WoowahanFresh/WoowahanFresh/View/Member/Login.storyboard
+++ b/WoowahanFresh/WoowahanFresh/View/Member/Login.storyboard
@@ -56,6 +56,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="페이스북으로 시작하기"/>
+                                <connections>
+                                    <action selector="btnLoginFacebook:" destination="ofs-8U-bsS" eventType="touchUpInside" id="sQq-0C-nHd"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x6A-OB-3cd">
                                 <rect key="frame" x="16" y="455" width="69" height="30"/>
@@ -83,6 +86,9 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="btnFacebookLogin" destination="ce4-PH-T1j" id="G2O-da-4EM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SG0-mV-eyr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
